fix: endpoints e documentacao da api
