# app/Http/Controllers/Controller.php
@@ -12,15 +12,6 @@ use OpenApi\Annotations as OA;
  *      version="1.0.0",
  *      title="Documentação API Dg News",
  *      description="API de cadastramento de usuários e Autênticação",
- *      @OA\Contact(
- *          email="douglasoliveirabeserradev@dewtech.io",
- *          name="Dewtech",
- *          url="https://www.dewtech.io"
- *      ),
- *      @OA\License(
- *          name="Apache 2.0",
- *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
- *      )
  * )
  */
 class Controller extends BaseController
