# app/Http/Controllers/UserController.php
@@ -3,13 +3,14 @@
 namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use App\Models\User;
+use Illuminate\Support\Facades\Hash;
 use OpenApi\Annotations as OA;
 
 class UserController extends Controller
 {
     /**
      * @OA\Post(
-     *     path="/api/newusers",
+     *     path="/api/user",
      *     summary="Cadastrar um novo usuário",
      *     description="Este endpoint cria um novo usuário no sistema",
      *     tags={"User"},
@@ -19,18 +20,13 @@ class UserController extends Controller
      *             type="object",
      *             @OA\Property(property="name", type="string", description="Nome do usuário"),
      *             @OA\Property(property="email", type="string", description="Email do usuário"),
-     *             @OA\Property(property="password", type="string", description="Senha do usuário")
+     *             @OA\Property(property="password", type="string", description="Senha do usuário"),
+     *              @OA\Property(property="password_confirmation", type="string", description="Comfirme a senha do usuário")
      *         )
      *     ),
      *     @OA\Response(
      *         response=201,
      *         description="Usuário criado com sucesso",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(property="id", type="integer", description="ID do usuário"),
-     *             @OA\Property(property="name", type="string", description="Nome do usuário"),
-     *             @OA\Property(property="email", type="string", description="Email do usuário")
-     *         )
      *     ),
      *     @OA\Response(
      *         response=400,
@@ -45,7 +41,7 @@ class UserController extends Controller
     public function store(Request $request)
     {
         // Validação dos dados recebidos
-        $request->validate([
+         $request->validate([
             'name' => 'required|string|max:255',
             'email' => 'required|email|unique:users,email',
             'password' => 'required|string|min:8|confirmed',
@@ -55,10 +51,19 @@ class UserController extends Controller
         $user = User::create([
             'name' => $request->name,
             'email' => $request->email,
-            'password' => bcrypt($request->password),
+            'password' => Hash::make($request->password),
         ]);
 
         // Retorno com o usuário criado
-        return response()->json($user, 201);
+       // Retorno com o usuário criado (sem expor a senha)
+return response()->json([
+    'message' => 'Usuário cadastrado com sucesso!',
+    'user' => [
+        'id' => $user->id,
+        'name' => $user->name,
+        'email' => $user->email,
+    ],
+], 201);
+
     }
 }
