# routes/api.php
@@ -1,11 +1,19 @@
 <?php
 
+use App\Http\Controllers\LoginController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
 
-Route::post('api/users',[UserController::class, 'store']);
+
+
+Route::post('/login', [LoginController::class, "index"]);
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/user', [UserController::class, 'store']);
+
+    Route::get('/user', function (Request $request) {
+        return $request->user();
+    });
+});
